# faasle

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml
src/: distance.rs  generic.rs  lib.rs  metric.rs
tests/: tests.rs
tests/common/: mod.rs
