[package]
name = "faasle-rs"
version = "0.1.0"
edition = "2021"
crate-type = ["lib"]
authors = ["Meesum Qazalbash <meesumqazalbash@gmail.com>"]
rust-version = "1.80.1"
description = "A Rust crate for evaluating distances (metrics)"
readme = "README.md"
repository = "https://github.com/Qazalbash/faasle-rs"
license = "MIT"
keywords = [
    "metrics",
    "distance",
    "multidimensional",
    "mathematics",
    "geometry",
]
categories = ["mathematics"]


[dependencies]
ndarray = "0.16.1"
num-traits = "0.2.19"

[dev-dependencies]
ndarray = { version = "0.16.1", features = ["approx"] }
ndarray-rand = "0.15.0"
paste = "1.0.15"
